--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/princess.css" rel="stylsheet" type="text/css">
+    <link href="css/princess.css" rel="stylesheet" type="text/css">
 
     <title>Princess</title>
 </head>
